[package]
name = "phf"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.8.0"
license = "MIT"
description = "Runtime support for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"
edition = "2018"

[lib]
name = "phf"
path = "src/lib.rs"
test = false

[features]
unicase = ["phf_shared/unicase"]
macros = [
	"phf_macros",
	"proc-macro-hack",
]

[dependencies]
phf_shared = { version = "0.8.0", path = "../phf_shared" }

proc-macro-hack = { version = "0.5.4", optional = true }
phf_macros = { version = "0.8.0", optional = true, path = "../phf_macros" }

[package.metadata.docs.rs]
features = ["macros", ]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

