[package]
name = "phf"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.8.0"
license = "MIT"
description = "Runtime support for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"
edition = "2018"

[lib]
name = "phf"
path = "src/lib.rs"
test = false

[features]
unicase = ["phf_shared/unicase"]

[dependencies]
phf_shared = { version = "0.8.0", path = "../phf_shared" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

